# Fractetris

./: .gitignore  CMakeLists.txt  README.md
docs/: spec-pieces.md  spec-scoring-modes.md  spec-statemachine.md  spec-timing-rng.md
fractal/: fractal.c
src/: assets.c  assets.h  audio.c  audio.h  game.c  game.h  input.c  input.h  main.c  video.c  video.h
tools/: amalgamate.py
web/: shell.html
